--- a/config.json
+++ b/config.json
@@ -4,8 +4,18 @@
     "voice": "voice.voicetotext.WhisperVoiceToText",
     "openrouter_models": [
         {"name": "deepseek/deepseek-r1:free"},
-        {"name": "deepseek/deepseek-chat:free"}
+        {"name": "deepseek/deepseek-r1-distill-llama-70b:free"},
+        {"name": "google/gemini-2.0-flash-thinking-exp-1219:free"},
+        {"name": "google/gemini-2.0-pro-exp-02-05:free"},
+        {"name": "deepseek/deepseek-chat:free"},
+        {"name": "nvidia/llama-3.1-nemotron-70b-instruct:free"},
+        {"name": "cognitivecomputations/dolphin3.0-r1-mistral-24b:free"},
+        {"name": "microsoft/phi-3-medium-128k-instruct:free"},
+        {"name": "huggingfaceh4/zephyr-7b-beta:free"},
+        {"name": "undi95/toppy-m-7b:free"},
+        {"name": "gryphe/mythomax-l2-13b:free"},
+        {"name": "sophosympatheia/rogue-rose-103b-v0.2:free"}
     ],
     "question": "Pregunta: {question}.",
-    "prompt": "Utilice los artículos proporcionados delimitados por comillas triples para responder preguntas de manera concisa y directa, sin explicaciones largas. Si no se puede encontrar la respuesta en los artículos, escriba \"No pude encontrar una respuesta\". La respuesta siempre en castellano. \"\"\"{data_str}\"\"\"."
+    "prompt": "Utilice los articulos proporcionados delimitados por comillas triples para responder en CASTELLANO preguntas de manera concisa y directa, sin explicaciones extensas. Si no se puede encontrar la respuesta en los articulos, escriba \"No pude encontrar una respuesta\". \"\"\"{data_str}\"\"\"."
 }
