--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
     "voice": "voice.voicetotext.WhisperVoiceToText",
     "openrouter_models": [
         {"name": "deepseek/deepseek-r1:free"},
-        {"name": "deepseek/deepseek-r1-distill-llama-70b:free"},
         {"name": "google/gemini-2.0-flash-thinking-exp-1219:free"},
+        {"name": "deepseek/deepseek-r1-distill-llama-70b:free"},
         {"name": "google/gemini-2.0-pro-exp-02-05:free"},
         {"name": "deepseek/deepseek-chat:free"},
         {"name": "nvidia/llama-3.1-nemotron-70b-instruct:free"},
@@ -17,5 +17,5 @@
         {"name": "sophosympatheia/rogue-rose-103b-v0.2:free"}
     ],
     "question": "Pregunta: {question}.",
-    "prompt": "Utilice los articulos proporcionados delimitados por comillas triples para responder en CASTELLANO preguntas de manera concisa y directa, sin explicaciones extensas. Si no se puede encontrar la respuesta en los articulos, escriba \"No pude encontrar una respuesta\". \"\"\"{data_str}\"\"\"."
+    "prompt": "Utilice los articulos proporcionados delimitados por comillas triples para responder en CASTELLANO preguntas de manera concisa y directa, sin explicaciones extensas. Si no se puede encontrar la respuesta en los articulos, escriba \"No pude encontrar una respuesta\". \"\"\"\n{data_str}\n\"\"\"."
 }
